--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <h1>I am starting a bootstrap while wering boots!</h1>
-    <h2>Hello! from Bootstrap</h2>
+    <h2 class="bg-primary">Hello! from Bootstrap</h2>
+    <p class="bg-success">This is something about me exploring something new!</p>
+    <p class="bg-warning">I warn you don't text this person, he/she will block you.</p>
     <main>
 
     </main>
