added bootstrap border, color, Ovberflow position

--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
     <h2 class="bg-primary">Hello! from Bootstrap</h2>
     <p class="bg-success">This is something about me exploring something new!</p>
     <p class="bg-warning">I warn you don't text this person, he/she will block you.</p>
+    <div class="p-3 mb-2 bg-info text-dark">.bg-info</div>
+
     <main>
+        <!-- exploring borders -->
+        <div class="border border-success border-3 ">I need a border or wall. Trump asked me to build a
+            border.</div>
+        <br>
+        <span class="border bg-danger  border-5 rounded-pill">This is your Capsule</span>
+        <br>
+        <br>
+        <p class="bg-dark text-light">This is my Bootstrap FuN !</p>
+        <br>
+        <!-- explore position -->
+        <div class="position-relative">
+            <div class="position-absolute top-0 start-0">1</div>
+            <div class="position-absolute top-0 end-0">22222222222222</div>
+            <div class="position-absolute top-50 start-50">33333333</div>
+            <div class="position-absolute bottom-50 end-50">444444444</div>
+            <div class="position-absolute bottom-0 start-0">5555</div>
+            <div class="position-absolute bottom-0 end-0">6666</div>
+        </div>
 
     </main>
     <footer>
