--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body class="bg-info">
     <h1>I am starting a bootstrap while wering boots!</h1>
     <h2 class="bg-primary">Hello! from Bootstrap</h2>
     <p class="bg-success">This is something about me exploring something new!</p>
@@ -28,6 +28,13 @@
         <br>
         <p class="bg-dark text-light">This is my Bootstrap FuN !</p>
         <br>
+        <!-- exploring shadows -->
+        <div class="shadow-lg p-3 mb-5 bg-body rounded w-50">I need some shadows</div>
+        <p class="text-center">Start aligned text on all viewport sizes.</p>
+        <div class="shadow-lg p-3 mb-5 rounded w-75">I playing with padding</div>
+        <br>
+        <br>
+
         <!-- explore position -->
         <div class="position-relative">
             <div class="position-absolute top-0 start-0">1</div>
