added bootstrap responsive image, table

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         <br>
         <span class="border bg-danger  border-5 rounded-pill">This is your Capsule</span>
         <br>
+        <p class="h1">Paragraph is acting like h1</p>
         <br>
         <p class="bg-dark text-light">This is my Bootstrap FuN !</p>
         <br>
         <!-- exploring shadows -->
         <div class="shadow-lg p-3 mb-5 bg-body rounded w-50">I need some shadows</div>
         <p class="text-center">Start aligned text on all viewport sizes.</p>
-        <div class="shadow-lg p-3 mb-5 rounded w-75">I playing with padding</div>
+        <div class="shadow-lg p-3 mb-5 rounded w-75">I am playing with padding</div>
         <br>
         <br>
 
