--- a/card.html
+++ b/card.html
@@ -11,6 +11,25 @@
 
 <body>
     <h1>Card khaltasi ammu tume Birokto koiro na!</h1>
+    <button class="btn btn-primary ms-5">My button</button>
+    <button class="btn btn-danger">Danger</button>
+    <br>
+    <br>
+    <button type="button" class="btn btn-secondary ms-5" data-bs-toggle="tooltip" data-bs-placement="top"
+        data-bs-custom-class="custom-tooltip" data-bs-title="This top tooltip is themed via CSS variables.">
+        Custom tooltip
+    </button>
+    <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
+        data-bs-placement="top" data-bs-content="Top popover">
+        Popover on top
+    </button>
+    <br><br>
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+            aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+            style="width: 75%"></div>
+    </div>
+    <br><br>
     <div class="card" style="width: 18rem;">
         <img src="images/monkey.jpg" class="card-img-top w-75 " alt="...">
         <div class="card-body">
@@ -75,6 +94,18 @@
             </div>
         </div>
     </div>
+    <br>
+    <!-- Block level -->
+    <div class="row">
+        <div class="col-2 text-truncate">
+            This text is quite long, and will be truncated once displayed.
+        </div>
+    </div>
+
+    <!-- Inline level -->
+    <span class="d-inline-block text-truncate" style="max-width: 150px;">
+        This text is quite long, and will be truncated once displayed.
+    </span>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
